buildscript {
    repositories {
        maven {
            url "https://maven.aliyun.com/repository/public"
        }
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.4.4")
        classpath "io.spring.gradle:dependency-management-plugin:1.0.10.RELEASE"
        classpath "gradle.plugin.com.github.viswaramamoorthy:gradle-util-plugins:0.1.0-RELEASE"
    }
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'war'
apply plugin: "com.github.ManifestClasspath"

repositories {
    maven {
        url "https://maven.aliyun.com/repository/public"
    }
    mavenCentral()
}

configurations {
    providedRuntime
    cucumberRuntime {
        extendsFrom testImplementation
    }
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

ext {
    set('jfactoryDal', '0.8.1-alpha.26')
}

dependencies {
    testAnnotationProcessor('org.projectlombok:lombok:1.18.32')
    testImplementation('org.projectlombok:lombok:1.18.32')
    testImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation("mysql:mysql-connector-java:8.0.13")
    testImplementation("io.cucumber:cucumber-java:6.10.2")
    testImplementation("io.cucumber:cucumber-spring:6.10.2")
    testImplementation group: 'org.mock-server', name: 'mockserver-client-java', version: '5.13.2'
    testImplementation "com.github.leeonky:jfactory:${jfactoryDal}"
    testImplementation "com.github.leeonky:jfactory-cucumber:${jfactoryDal}"
    testImplementation "com.github.leeonky:jfactory-repo-jpa:${jfactoryDal}"
    testImplementation "com.github.leeonky:RESTful-cucumber:${jfactoryDal}"
    testImplementation "com.github.leeonky:DAL-java:${jfactoryDal}"
    testImplementation "com.github.leeonky:DAL-extension-basic:${jfactoryDal}"

}

task cucumber(type: JavaExec) {
    dependsOn assemble, testClasses
    main = "io.cucumber.core.cli.Main"
    classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
    environment "SPRING_PROFILES_ACTIVE", "test"
    jvmArgs "-Dfile.encoding=UTF-8", "-Dsun.jnu.encoding=utf-8"
    args = ['--plugin', 'pretty',
            '--glue', 'com.odde.atddv2',
            '--glue', 'com.github',
            project.hasProperty('file') ? project.file : 'src/test/resources']
}

tasks.bootWar { enabled = false }